# TestTasks

IndvT1/: README.md
IndvT1/include/: MathVector.h  MathVectorOperations.h
IndvT1/src/: MathVector.cpp  main.cpp
IndvT2/: README.md
IndvT2/include/: Stack.h
IndvT2/src/: LinkList.hpp  Stack.cpp  main.cpp
Lab1/: README.md
Lab1/L1/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parser.cpp  parser.h
Lab1/build-L1-Desktop-Debug/: CMakeCache.txt.prev  L1  Makefile  cmake_install.cmake
Lab1/build-L1-Desktop-Debug/.qtc_clangd/: compile_commands.json
Lab2/: README.md
Lab2/L2/: CMakeLists.txt  Data.txt  Groups.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Lab2/build-L2-Desktop-Debug/: CMakeCache.txt.prev  File.ftxt  L2  Makefile  cmake_install.cmake
Lab2/build-L2-Desktop-Debug/.qtc_clangd/: compile_commands.json
Lab3/: README.md
Lab3/L3/: CMakeLists.txt  Student.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Lab3/build-L3-Desktop-Debug/: CMakeCache.txt  L3  Makefile  cmake_install.cmake
Lab3/build-L3-Desktop-Debug/.qtc_clangd/: compile_commands.json
Lab4/: README.md
Lab4/L4/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Lab4/build-L4-Desktop-Debug/: CMakeCache.txt  L4  Makefile  cmake_install.cmake
Lab5/: README.md
Lab5/L5/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcustomplot.h
Lab5/build-L5-Desktop-Debug/: CMakeCache.txt.prev  Makefile  cmake_install.cmake
Lab6/: README.md
Lab6/L6/: CMakeLists.txt  fish.cpp  fish.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Lab6/build-L6-Desktop-Debug/: CMakeCache.txt  L6  Makefile  cmake_install.cmake
T1/: README.md
T1/src/: main.cpp
T2/: README.md
T2/src/: main.cpp
T3/: README.md
T3/include/: Department.h  Prisoner.h
T3/src/: Department.cpp  main.cpp
T4/: README.md
T4/src/: main.cpp
T5/: README.md
T5/include/: Client.h
T5/src/: Client.cpp  main.cpp
(+86 files in other folders)
